SERVER-9066: avoid duplicate JS field names