src/mongo/scripting/engine_v8.h
@@ -447,7 +447,7 @@ namespace mongo {
         V8Scope* _scope;
         BSONObj _obj;
         bool _modified;
-        list<string> _extra;
+        set<string> _extra;
         set<string> _removed;
     };
 
